--- a/client/package.json
+++ b/client/package.json
@@ -27,7 +27,8 @@
     "react-redux": "^9.0.1",
     "react-router-dom": "^6.23.1",
     "redux-persist": "^6.0.0",
-    "rollup": "^4.45.0"
+    "rollup": "^4.45.0",
+    "vite": "^5.2.0"
   },
   "devDependencies": {
     "@swc/cli": "^0.3.12",
@@ -43,7 +44,7 @@
     "eslint-plugin-react-refresh": "^0.4.6",
     "postcss": "^8.4.38",
     "tailwind-scrollbar": "^3.1.0",
-    "tailwindcss": "^3.4.3",
-    "vite": "^5.2.0"
+    "tailwindcss": "^3.4.3"
+    
   }
 }
