--- a/client/package.json
+++ b/client/package.json
@@ -34,7 +34,8 @@
 
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.38",
-    "tailwindcss": "^3.4.3"
+    "tailwindcss": "^3.4.3",
+    "tailwind-scrollbar": "^3.1.0"
   },
   "devDependencies": {
     "@swc/cli": "^0.3.12",
@@ -45,7 +46,6 @@
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.6",
-    "tailwind-scrollbar": "^3.1.0"
+    "eslint-plugin-react-refresh": "^0.4.6"
   }
 }
